# colombia-hydrodata

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  release.yml
docs/: getting-started.md  index.md
docs/explanation/: architecture.md  data-sources.md  variable-keys.md
docs/how-to/: filter-stations.md  spatial-queries.md
docs/notebooks/: fetch-data.ipynb  plot-data.ipynb
docs/reference/: attributes.md  client.md  dataset.md  filters.md  plot.md  station.md
docs/tutorial/: client.md  datasets.md  plotting.md  spatial.md  stations.md
sample/: fetch_cne.py  fetch_datasets.py  fetch_params.py  main.py
src/colombia_hydrodata/: __init__.py  attributes.py  client.py  dataset.py  filters.py  plot.py  station.py
src/colombia_hydrodata/utils/: cache.py  endpoints.py  keys.py  plot.py  transform.py  tsa.py
src/colombia_hydrodata/utils/fetch/: aquarius.py  stations.py
src/colombia_hydrodata/utils/tsa/: deconstruction.py
