[project]
name = "colombia-hydrodata"
version = "0.2.0"
description = ""
authors = [
    { name = "Sebástian Narváez Salcedo", email = "sebnarvaez19@outlook.com" },
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "aquarius-webportal (>=0.4.1,<1.0.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "geopandas (>=1.1.3,<2.0.0)",
    "platformdirs (>=4.9.4,<5.0.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
    "statsmodels (>=0.14.6,<0.15.0)",
    "seaborn (>=0.13.2,<0.14.0)",
]

[tool.poetry]
packages = [{ include = "colombia_hydrodata", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "jupyterlab (>=4.5.6,<5.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "mkdocs-material (>=9.7.6,<10.0.0)",
    "mkdocstrings[python] (>=1.0.3,<2.0.0)",
    "mkdocs-autorefs (>=1.4.4,<2.0.0)",
]
